# seamaster-library

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  runner.py
.circleci/: config.yml
src/oceanmaster/: Constants.py  Translate.py  Utils.py  Wrapper.py  __init__.py  botbase.py  constants.py  testfile.py  translate.py  utils.py  wrapper.py
src/oceanmaster/api/: __init__.py  game_api.py
src/oceanmaster/context/: __init__.py  bot_context.py
src/oceanmaster/models/: Action.py  Algae.py  Bank.py  Bot.py  PermanentEntities.py  PlayerView.py  VisibleEntities.py  VisibleScrap.py  __init__.py  action.py  algae.py  bank.py  bot.py  enemy_bot.py  energy_pad.py  permanent_entities.py  player_view.py  scrap.py  visible_entities.py  visible_scrap.py
src/oceanmaster/shortest_distances/: __init__.py
src/oceanmaster/templates/: FlashScout.py  Forager.py  HeatSeeker.py  Lurker.py  Saboteur.py  ___init__.py  flash_scout.py  forager.py  heat_seeker.py  lurker.py  saboteur.py
src/oceanmaster/test/: constants.py
src/seamaster/: __init__.py  botbase.py  constants.py  testfile.py  translate.py  utils.py
src/seamaster/api/: __init__.py  game_api.py
src/seamaster/context/: __init__.py  bot_context.py
src/seamaster/models/: __init__.py  action.py  algae.py  bank.py  bot.py  enemy_bot.py  energy_pad.py  permanent_entities.py  player_view.py  scrap.py  visible_entities.py
src/seamaster/shortest_distances/: __init__.py  dist.json
src/seamaster/templates/: ___init__.py  flash_scout.py  forager.py  lurker.py  saboteur.py  scout.py
src/test/models/: bot.py  visible_entities.py
